chart/templates/phpldapadmin_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpldapadmin
  namespace: ldap
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 80
  selector:
    app: phpldapadmin
